Header minor spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9948,10 +9948,10 @@ h3 {
 }
 
 .header__logo {
-  margin-top: 1.25rem;
+  margin: 1.25rem 0 1rem;
 }
 .header__list {
-  margin: 0.5rem 1.6875rem 0 0;
+  margin: 0.5rem 1.75rem 0 0;
 }
 .header__list-item {
   display: flex;
@@ -9961,13 +9961,12 @@ h3 {
   margin-bottom: 2px;
 }
 .header__list-item::before {
-  margin-right: 1px;
+  margin-right: 6px;
   content: "";
   display: inline-block;
   height: 12px;
   width: 11px;
   background: url("../img/ic-check.png") no-repeat;
-  background-size: 9px;
 }
 
 .content {
